--- a/_posts/2022-02-18-lvm.md
+++ b/_posts/2022-02-18-lvm.md
@@ -5,8 +5,8 @@ title: lvm介绍
 subtitle: lvm介绍
 description: 通过lvm存储技术去管理linux的存储
 category: 技术
-image: /assets/img/1336985472_9898.png
-optimized_image: /assets/img/1336985472_9898.png
+image: /assets/img/about-bg-walle.jpg
+optimized_image: /assets/img/about-bg-walle.jpg
 tags:
   - linux
   - 运维
@@ -16,13 +16,43 @@ category: 技术
 jishu: true
 ---
 
-# lvm原理图
+## 环境说明
 
-![1336985472_9898](C:\Users\LiuJing\Desktop\03-TyporaDoc\images\1336985472_9898.png)
+该lvm配置，基于centos7.6
 
-​                                                                                                            架构图
 
-## NOTICE
+
+## 整体原理
+
+通俗易懂讲解lvm的原理。 
+
+1、首先介绍lvm是什么？
+
+* 首先，lvm它是Linux环境下对磁盘分区进行管理的一种机制
+* 传统分区分区完成后，各个分区的磁盘容量无法改变，非常不方便
+* LVM与传统的磁盘与分区相比，LVM为计算机提供了更高层次的磁盘存储。它使系统管理员可以更方便的为应用与用户分配存储空间。换句话说，通过lvm这种技术，可以使各个分区的磁盘容量动态调整。
+
+
+
+2、lvm架构图
+
+见架构图，Physical volume(以下简称，PV),    Logical Volume(一下简称，LV)，Volume GROUP(以下简称，VG)
+
+![1336985472_9898](/image/lvm/1336985472_9898.png)        
+
+​                                        lvm架构图
+
+
+
+3、整体原理
+
+PV可以理解我们挂载的硬盘，比如我们挂载3个1T的硬盘，那么我们的VG（可以理解为一个蓄水池），VG总储存量就是3T。VG总储存量就是3T，将3T可以任意分配到LV中，比如我们可以设置5个LV，每个LV的储存那么就是600G。最后，LV的值确定下来后，我们可以在LV上建立文件系统(比如/home或者/usr等)。
+
+LV的值不是一直保持不变，而是可以后期改变的，这就说明文件系统的储存大小也是能改变的。
+
+​            
+
+## NOTICE(一些容易出bug的地方)
 
 #### 1、umount /home
 
@@ -37,7 +67,7 @@ lvremove /dev/mapper/centos-home
 
 #### 2、/dev/centos/data和/dev/mapper/centos-data
 
-都是VG中创建LV，/dev/centos/data和/dev/mapper/centos-data都是LV，且一致。
+都是VG中创建LV，/dev/centos/data和/dev/mapper/centos-data两个路径等价。
 
 
 
@@ -100,9 +130,16 @@ df -h
 #创建目录并挂载
 mkdir -p /data /docker-data /glusterfs-registry /glusterfs-sys-data /glusterfs-user-data && mount -a
 
-#在扩容lv后，需要xfs_growfs生效增长空间。
+#在扩容lv后，需要xfs_growfs生效增长空间（针对于xfs文件系统，可通过`cat /etc/fstab`查看文件系统类别）
 xfs_growfs /dev/centos/root
+
+#在扩容lv后，需要resize2fs生效增长空间（针对ext4文件系统，可通过`cat /etc/fstab`查看文件系统类别）
+resize2fs /dev/centos/root
 ```
 
-参考链接：https://blog.csdn.net/lenovouser/article/details/54233570
+
+
+
+
+
 
